crates/kul-core/tests/snapshots/parser__parse_unsupported_person_field_diagnoses.snap
---
source: crates/kul-core/tests/parser.rs
expression: "render(\"person alice name:\\\"Alice\\\" born:1950 gender:female\\n\")"
---
ast: Document {
    statements: [
        Person(
            PersonStmt {
                span: ByteSpan {
                    start: 0,
                    end: 49,
                },
                keyword_span: ByteSpan {
                    start: 0,
                    end: 6,
                },
                id: Ident {
                    name: "alice",
                    span: ByteSpan {
                        start: 7,
                        end: 12,
                    },
                },
                fields: [
                    PersonField {
                        span: ByteSpan {
                            start: 13,
                            end: 25,
                        },
                        name_span: ByteSpan {
                            start: 13,
                            end: 17,
                        },
                        kind: Name(
                            StringValue {
                                value: "Alice",
                                span: ByteSpan {
                                    start: 18,
                                    end: 25,
                                },
                            },
                        ),
                    },
                    PersonField {
                        span: ByteSpan {
                            start: 26,
                            end: 35,
                        },
                        name_span: ByteSpan {
                            start: 26,
                            end: 30,
                        },
                        kind: Born(
                            DateLit {
                                span: ByteSpan {
                                    start: 31,
                                    end: 35,
                                },
                                circa: false,
                                year: 1950,
                                month: None,
                                day: None,
                            },
                        ),
                    },
                    PersonField {
                        span: ByteSpan {
                            start: 36,
                            end: 49,
                        },
                        name_span: ByteSpan {
                            start: 36,
                            end: 42,
                        },
                        kind: Gender(
                            GenderValue {
                                value: Female,
                                span: ByteSpan {
                                    start: 43,
                                    end: 49,
                                },
                            },
                        ),
                    },
                ],
                birth: None,
                adoptions: [],
                malformed_fields: [],
            },
        ),
    ],
}
diagnostics: []
